--- a/templates/hello/index.html.twig
+++ b/templates/hello/index.html.twig
@@ -9,7 +9,7 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Hello {{ controller_name|lower }}! ✅</h1>
 
     {% for num in tests %}
         {% if num <= 2 %}
