--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,10 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+            {% for message in app.flashes('success') %}
+                <div style='color: green'>{{ message }}<div>
+            {% endfor %}
+        {% endblock %}
     </body>
 </html>
