--- a/templates/micro_post/_add.html.twig
+++ b/templates/micro_post/_add.html.twig
@@ -3,5 +3,24 @@
 {% block title %}Create New Post{% endblock %}
 
 {% block body %}
-    {{ form(form) }}
+    {{ form_start(form, {action: 'https://www.google.com'}) }}
+        <div>{{ form_errors(form) }}</div>
+        <div>
+            {{ form_label(form.title) }}
+        </div>
+        <div>
+            {{ form_widget(form.title, {'attr': {'style': 'color:gray'}}) }}
+        </div>
+
+        <div>
+            {{ form_label(form.text, 'Post text') }}
+        </div>
+        <div>
+            {{ form_widget(form.text) }}
+        </div>
+
+        <div>
+            <button type='submit'>Save</button>
+        </div>
+    {{ form_end(form) }}
 {% endblock %}
