--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
         {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -15,10 +14,9 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}
-            {% for message in app.flashes('success') %}
-                <div style='color: green'>{{ message }}<div>
-            {% endfor %}
-        {% endblock %}
+        {% for message in app.flashes('success') %}
+            <div style='color: green'>{{ message }}<div>
+        {% endfor %}
+        {% block body %}{% endblock %}
     </body>
 </html>
