--- a/templates/micro_post/_edit.html.twig
+++ b/templates/micro_post/_edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create New Post{% endblock %}
+{% block title %}Edit Post{% endblock %}
 
 {% block body %}
    {{ include('micro_post/_form.html.twig') }}
