--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,7 +30,10 @@
 
             <div class="text-right">
                 <div class="text-sm text-gray-400 dark:text-gray-500">
-                    Login & Registration
+                    <div>Login & Registration</div>
+                    <div>
+                        <a href={{ path('app_micro_post_add') }}>Add New</a>
+                    </div>
                 </div>
             </div>
         </div>
