--- a/templates/micro_post/_form.html.twig
+++ b/templates/micro_post/_form.html.twig
@@ -1,20 +1,17 @@
 {{ form_start(form) }}
     <div>{{ form_errors(form) }}</div>
     <div>
-        {{ form_label(form.title) }}
-    </div>
-    <div>
-        {{ form_widget(form.title, {'attr': {'style': 'color:gray'}}) }}
-    </div>
-
-    <div>
-        {{ form_label(form.text, 'Post text') }}
-    </div>
-    <div>
-        {{ form_widget(form.text) }}
+        {{ form_label(form.title, {'label_attr': {'class': 'block text-sm text-gray-700 dark:text-gray-300 font-medium'}}) }}
+        {{ form_widget(form.title, {'attr': {'class': 'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2'}}) }}
+        {{ form_errors(form.title) }}
     </div>
 
     <div>
-        <button type='submit'>Save</button>
+        {{ form_label(form.text, 'Post text', {'label_attr': {'class': 'block text-sm text-gray-700 dark:text-gray-300 font-medium'}}) }}
+        {{ form_widget(form.text, {'attr': {'class': 'block w-full shadow-sm border-gray-300 dark:border-transparent dark:text-gray-800 rounded-md border p-2 mt-1 mb-2'}}) }}
+    </div>
+
+    <div>
+        <button type='submit' class="block w-full shadow-sm border-transparent bg-indico-600 hover:bg-indigo-700 dark:bg-indigo-500 dark:hover:bg-indigo-400 text-white rounded-md border p-2 mt-4 mb-2">Save</button>
     </div>
 {{ form_end(form) }}
