--- a/templates/micro_post/index.html.twig
+++ b/templates/micro_post/index.html.twig
@@ -22,6 +22,9 @@
                 <div class="text-sm text-gray-500 dark:text-gray-400">
                     <a href="#">user@email.com</a>
                 </div>
+                <div>
+                    <a href={{ path('app_micro_post_edit', {microPost: post.id})}}>Edit</a>
+                </div>
             </div>
         {% endfor %}
     {% else %}
